CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(imx_usb_loader)
INCLUDE(GNUInstallDirs)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(LIBUSB REQUIRED libusb-1.0)

ADD_DEFINITIONS(-DSYSCONFDIR="${CMAKE_INSTALL_FULL_SYSCONFDIR}")
FILE(GLOB IMX_CONFIGS "*.conf")

ADD_LIBRARY(imx_sdp OBJECT imx_sdp.c)

ADD_EXECUTABLE(imx_uart
${IMX_CONFIGS}
imx_uart.c
$<TARGET_OBJECTS:imx_sdp>
)

ADD_EXECUTABLE(imx_usb
${IMX_CONFIGS}
imx_usb.c
$<TARGET_OBJECTS:imx_sdp>
)

TARGET_LINK_LIBRARIES(imx_usb PRIVATE ${LIBUSB_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(imx_usb PRIVATE ${LIBUSB_INCLUDE_DIRS})

INSTALL(TARGETS imx_uart imx_usb RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
INSTALL(FILES ${IMX_CONFIGS} DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/imx-loader.d")
